--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: grey;
     margin: 0;
     min-height: 100vh;
@@ -6,13 +6,15 @@ body{
     justify-content: center;
     align-content: center;
 }
-#content{
+
+#content {
     /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
 }
-#sketchContainer{
+
+#sketchContainer {
     border: 1px solid red;
     background-color: red;
     border-radius: 20px;
@@ -24,22 +26,26 @@ body{
     align-items: center;
     box-shadow: 0 0 5px 10px rgba(0, 0, 0, 0.375);
 }
-.sketchPieces{
+
+.sketchPieces {
     /* border: 1px solid black; */
     flex: 1 0 0;
     width: 100%;
 }
-.drawingBoard{
+
+.drawingBoard {
     flex: 0 0 70%;
     width: 80%;
     background-color: rgb(231, 220, 220);
 }
-.controls{
+
+.controls {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.knobs{
+
+.knobs {
     width: 50px;
     height: 50px;
     border: 5px outset black;
@@ -47,14 +53,26 @@ body{
     border-radius: 50%;
     margin: 0 20px 0;
 }
-h1{
+
+h1 {
     font-family: 'Tilt Prism', cursive, sans-serif;
     margin: 0;
     font-size: 50px;
     font-style: italic;
 }
-.settings{
+
+.settings {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 200px;
+}
+
+
+.settings > div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
 }
