--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ body {
 }
 
 #content {
-    /* border: 1px solid black; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,13 +27,22 @@ body {
 }
 
 .sketchPieces {
-    /* border: 1px solid black; */
     flex: 1 0 0;
     width: 100%;
 }
 
-.drawingBoard {
+.colorSettings {
     flex: 0 0 70%;
+    display: flex;
+    justify-content: center;
+}
+
+.penSettings {
+    flex: 1 0 0;
+}
+
+.drawingBoard {
+    height: 100%;
     width: 80%;
     background-color: rgb(231, 220, 220);
 }
@@ -61,18 +69,23 @@ h1 {
     font-style: italic;
 }
 
-.settings {
+.gridSettings {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 200px;
+    font-family: 'Tilt Prism', cursive, sans-serif;
+    font-weight: bold;
 }
 
 
-.settings > div{
+.gridSettings>div {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 20px;
+    font-size: 28px;
+}
+
+div label:hover {
+    text-shadow: rgb(0, 13, 255) 0 0 1px;
 }
