--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     justify-content: center;
     align-content: center;
+    font-family: 'Tilt Prism', cursive, sans-serif;
 }
 
 #content {
@@ -39,12 +40,43 @@ body {
 
 .penSettings {
     flex: 1 0 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+button{
+    font-size: 20px;
+    background-color: gold;
+    padding: 10px 0;
+    font-family: cursive, sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+}
+.leftSide button{
+    border-radius: 5px 0 0 5px;
+    transform: translateX(-1px);
+}
+.rightSide button{
+    border-radius: 0 5px 5px 0;
+    transform: translateX(1px);
+}
+.rightSide > .clear{
+    margin-top: 52px;
+}
+input[type="color"]{
+    border: none;
+    width: 100%;
+    background-color: gold;
+    cursor: pointer;
+    transform: translateX(-1px);
+    border-radius: 5px 0 0 5px;
 }
 
 .drawingBoard {
     height: 100%;
     width: 80%;
     background-color: rgb(231, 220, 220);
+    border-radius: 5px;
 }
 
 .controls {
@@ -63,7 +95,6 @@ body {
 }
 
 h1 {
-    font-family: 'Tilt Prism', cursive, sans-serif;
     margin: 0;
     font-size: 50px;
     font-style: italic;
@@ -73,7 +104,6 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Tilt Prism', cursive, sans-serif;
     font-weight: bold;
 }
 
