--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,15 @@ input[type="color"]{
 }
 
 .drawingBoard {
-    height: 100%;
+    height: 400px;
     width: 80%;
     background-color: rgb(231, 220, 220);
-    border-radius: 5px;
+    /* border-radius: 5px; */
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    flex-wrap: wrap;
 }
 
 .controls {
@@ -92,6 +97,7 @@ input[type="color"]{
     background-color: gold;
     border-radius: 50%;
     margin: 0 20px 0;
+    transform: translateY(-5px);
 }
 
 h1 {
@@ -118,4 +124,21 @@ h1 {
 
 div label:hover {
     text-shadow: rgb(0, 13, 255) 0 0 1px;
+}
+
+.square{
+    box-sizing: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.42);
+}
+.small{
+    height: 50px;
+    width: 50px;
+}
+.medium{
+    height: 25px;
+    width: 25px;
+}
+.large{
+    height: 10px;
+    width: 10px;
 }
