--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ input[type="color"]{
     align-items: flex-start;
     align-content: flex-start;
     flex-wrap: wrap;
+    border: 1px solid black;
 }
 
 .controls {
